Fix various problems with cropping and impairment (BL-15138)

--- a/src/BloomBrowserUI/bookEdit/css/editMode.less
+++ b/src/BloomBrowserUI/bookEdit/css/editMode.less
@@ -1112,7 +1112,7 @@ body.simulateCataracts {
 // the yellow background, not the image.
 body.simulateColorBlindness {
     .bloom-canvas {
-        img {
+        img:not([src="placeHolder.png"]) {
             visibility: hidden;
         }
     }
